Pull request #1103: fix/AG-10607 fullscreen editor scroll & line break
Merge in EXTENSIONS/browser-extension from fix/AG-10607-1 to master

Squashed commit of the following:

commit fc04a808c4a6b9b45579283b974a67fb32a2a5ea
Merge: 7ae306474 879819252
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Oct 15 18:52:01 2021 +0300

    Merge branch 'master' into fix/AG-10607-1

commit 7ae3064742e5d947dc8d1eb61b5254e331f3e051
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Oct 15 16:30:40 2021 +0300

    fix/AG-10607

commit 7cf15eaf48da29321063bf0c91e6a6a960ae003d
Author: Anton <a.kaprielov@adguard.com>
Date:   Fri Oct 15 15:24:45 2021 +0300

    fix/AG-10607 fullscreen editor scroll & line break

--- a/Extension/src/pages/options/styles/common.pcss
+++ b/Extension/src/pages/options/styles/common.pcss
@@ -10,7 +10,6 @@ html,
 body {
     font-family: Roboto, "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu, Arial, sans-serif;
     margin: 0;
-    overflow-y: scroll;
     height: 100%;
     font-size: 16px;
     color: var(--gray-base);
@@ -19,6 +18,10 @@ body {
         background-color: var(--black);
         color: var(--gray300)
     }
+}
+
+.options {
+    overflow-y: scroll;
 }
 
 h2 {
